@startuml
title 文档任务状态机（当前实现）

[*] --> UPLOADED : 上传受理成功并落库
UPLOADED --> INGESTING : Worker CAS 抢占成功（处理阶段）
INGESTING --> INDEXED : 处理成功（处理阶段）
INGESTING --> FAILED : 处理失败（处理阶段）

note right of UPLOADED
接口返回 ACCEPTED 是“对外响应语义”
UPLOADED 是“内部持久化状态”
两者关注点不同，不冲突
end note

note right of INGESTING
处理阶段所有状态推进都通过 CAS：
- UPLOADED -> INGESTING
- INGESTING -> INDEXED/FAILED
避免并发写导致状态回退
end note

@enduml
